// ignore: unused_import
import 'package:intl/intl.dart' as intl;
import 'app_localizations.dart';

// ignore_for_file: type=lint

/// The translations for English (`en`).
class AppLocalizationsEn extends AppLocalizations {
  AppLocalizationsEn([String locale = 'en']) : super(locale);

  @override
  String get quickStartTitle => 'Quick Start';

  @override
  String get repsLabel => 'REPS';

  @override
  String get workLabel => 'WORK';

  @override
  String get restLabel => 'REST';

  @override
  String get saveButton => 'SAVE';

  @override
  String get startButton => 'START';

  @override
  String get presetsTitle => 'YOUR PRESETS';

  @override
  String get addButton => 'ADD';

  @override
  String get noPresetsMessage => 'No presets';

  @override
  String get presetNameError => 'Please enter a name';

  @override
  String get volumeButtonLabel => 'Adjust volume';

  @override
  String get volumeSliderLabel => 'Volume slider';

  @override
  String get menuButtonLabel => 'More options';

  @override
  String get collapseQuickStartLabel => 'Collapse quick start section';

  @override
  String get decreaseRepsLabel => 'Decrease repetitions';

  @override
  String get increaseRepsLabel => 'Increase repetitions';

  @override
  String get decreaseWorkLabel => 'Decrease work time';

  @override
  String get increaseWorkLabel => 'Increase work time';

  @override
  String get decreaseRestLabel => 'Decrease rest time';

  @override
  String get increaseRestLabel => 'Increase rest time';

  @override
  String get savePresetLabel => 'Save quick preset';

  @override
  String get startIntervalLabel => 'Start interval';

  @override
  String get editPresetsLabel => 'Edit presets';

  @override
  String get addPresetLabel => 'Add preset';

  @override
  String get presetNamePrompt => 'Preset name';

  @override
  String get cancelButton => 'CANCEL';

  @override
  String get okButton => 'OK';

  @override
  String get simpleModeButton => 'SIMPLE';

  @override
  String get advancedModeButton => 'ADVANCED';

  @override
  String get closeButtonLabel => 'Close';

  @override
  String get saveButtonLabel => 'Save';

  @override
  String get simpleModeLabel => 'Simple mode';

  @override
  String get advancedModeLabel => 'Advanced mode';

  @override
  String get presetNamePlaceholder => 'Preset name';

  @override
  String get presetNameLabel => 'Preset name';

  @override
  String get prepareLabel => 'PREPARE';

  @override
  String get cooldownLabel => 'COOLDOWN';

  @override
  String get decreasePrepareLabel => 'Decrease prepare time';

  @override
  String get increasePrepareLabel => 'Increase prepare time';

  @override
  String get decreaseCooldownLabel => 'Decrease cooldown time';

  @override
  String get increaseCooldownLabel => 'Increase cooldown time';

  @override
  String get workoutExitButton => 'Hold to exit';

  @override
  String get workoutStepWork => 'WORK';

  @override
  String get workoutStepRest => 'REST';

  @override
  String get workoutStepPrepare => 'PREPARE';

  @override
  String get workoutStepCooldown => 'COOLDOWN';

  @override
  String get workoutToggleSound => 'Toggle sound on or off';

  @override
  String get workoutPrevious => 'Previous';

  @override
  String get workoutNext => 'Next';

  @override
  String get workoutPause => 'Pause';

  @override
  String get workoutResume => 'Resume';

  @override
  String get endWorkoutTitle => 'FINI';

  @override
  String get endWorkoutStopLabel => 'Stop timer';

  @override
  String get endWorkoutRestartLabel => 'Restart timer';

  @override
  String get advancedRepsLabel => 'REPS';

  @override
  String get advancedTimeLabel => 'TIME';

  @override
  String get advancedStepRepsLabel => 'REPS';

  @override
  String get advancedColorLabel => 'COLOR';

  @override
  String get advancedFinishLabel => 'FINISH';

  @override
  String get advancedAlarmLabel => 'ALARM';

  @override
  String advancedAlarmBeepsFormat(int count) {
    return 'BEEP X$count';
  }

  @override
  String advancedStepDefaultName(int number) {
    return 'Step $number';
  }

  @override
  String get advancedAddStepLabel => 'Add step to group';

  @override
  String get advancedAddGroupLabel => 'Add a new group';

  @override
  String get advancedDuplicateLabel => 'Duplicate step';

  @override
  String get advancedDeleteLabel => 'Delete step';

  @override
  String get advancedReorderLabel => 'Reorder step';

  @override
  String get advancedDecreaseLabel => 'Decrease';

  @override
  String get advancedIncreaseLabel => 'Increase';

  @override
  String get advancedChooseColorLabel => 'Choose color';

  @override
  String get advancedChooseColorTitle => 'Choose a color';
}
